# oti-topo

./: .gitignore  CMakeLists.txt  TPZElasticity2DOtiTopoMP.cpp  TPZElasticity2DOtiTopoMP.h  TPZElasticity3DOtiTopo.cpp  TPZElasticity3DOtiTopo.h  TPZHelmholtz.cpp  TPZHelmholtz.h  darcyzinho.cpp  filterstruct.h  oti-topo.code-workspace  otitopo.cpp  otitopo_matwithmem.cpp  pztest.cpp
meshes/: beam20_10.msh  beam40_20.msh  beam80_40.msh  beam_unstructured.msh  cube.geo  cube.msh  cube2.geo  cubeold.geo
