cmake_minimum_required(VERSION 3.14)

project (LearningPZ LANGUAGES C CXX)


set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


# Finding the pz package
find_package(NeoPZ REQUIRED HINTS ../NeoPZ_install ../neopz_install)

# Making pz "seeable" in Xcode
file(GLOB_RECURSE PZ_SRC
     "../neopz/*.h"
     "../neopz/*.cpp"
     "../NeoPzDevelop/*.h"
     "../NeoPzDevelop/*.cpp"
)
add_custom_target( GlobalFiles SOURCES ${PZ_SRC})


# creating the projects
add_executable(pztest pztest.cpp)
target_link_libraries(pztest PUBLIC NeoPZ::pz)
#target_include_directories(pztest PUBLIC ${PZ_INCLUDE_DIRS})
#target_include_directories(pztest PUBLIC ${CMAKE_SOURCE_DIR}/sources)
